--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub_ Profile</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <form  class="user-form" id="form">
+        <input type="text" id="search" placeholder="search a Github user">
+    </form>
+
+        <main id="main">
+            
+        </main>
+
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
