--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     </form>
 
         <main id="main">
-            
+            <div class="card">
+                <div>
+                    <img src="https://randomuser.me/portraits/men/30.jpg" alt="" class="avatar">
+                </div>
+
+                <div class="user-info">
+                    
+                </div>
+            </div>
         </main>
 
 
