--- a/index.html
+++ b/index.html
@@ -19,7 +19,21 @@
                 </div>
 
                 <div class="user-info">
-                    
+                    <h2>johndoe</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni et sequi vero magnam aut doloremque ad iste fugit incidunt expedita.</p>
+
+                    <ul>
+                        <li>300<strong>Followers</strong></li>
+                        <li>100<strong>Following</strong></li>
+                        <li>30<strong>Repos</strong></li>
+                    </ul>
+
+                    <div id="repos">
+                        <a href="#" class="repos">  Repo 1</a>
+                        <a href="#" class="repos">  Repo 2</a>
+                        <a href="#" class="repos">  Repo 3</a>
+                    </div>
+
                 </div>
             </div>
         </main>
