--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub_ Profile</title>
+    <title>GithubProfile</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <input type="text" id="search" placeholder="search a Github user">
     </form>
 
-        <main id="mai"></main>
+        <main id="main"></main>
 
                
                    
